unit testing and some fixing
