# docs/swagger.json
@@ -11,6 +11,11 @@
     "paths": {
         "/api/order": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "handler for get order request, allows user to order the taxi",
                 "produces": [
                     "application/json"
@@ -47,6 +52,11 @@
         },
         "/api/profile": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "handler for get profile request, allows user to check his profile data(name,  phone number, email, rating)",
                 "produces": [
                     "application/json"
@@ -81,6 +91,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "handler for delete profile request, allows user to delete his account(user's data will be available for registration for other users)",
                 "consumes": [
                     "application/json"
@@ -118,6 +133,11 @@
                 }
             },
             "patch": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "handler for get profile request, allows user to update data(name, phone number, email). You can change any field of this data, but you should input correct data\"",
                 "consumes": [
                     "application/json"
@@ -449,6 +469,13 @@
                     "type": "integer"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
