# handler/handler.go
@@ -2,81 +2,47 @@ package handler
 
 import (
 	"fmt"
-	"github.com/gin-gonic/gin"
-	"github.com/infinitss13/innotaxiuser/cmd/cache"
-	"github.com/sirupsen/logrus"
-	"github.com/swaggo/files"
+	"github.com/gin-contrib/pprof"
+	swaggerFiles "github.com/swaggo/files"
 	"net/http"
 
+	"github.com/gin-gonic/gin"
+	"github.com/infinitss13/innotaxiuser/cmd/cache"
 	"github.com/infinitss13/innotaxiuser/cmd/logger"
-	"github.com/infinitss13/innotaxiuser/configs"
-	"github.com/infinitss13/innotaxiuser/database"
-	"github.com/infinitss13/innotaxiuser/middleware"
 	"github.com/infinitss13/innotaxiuser/services"
 	"github.com/prometheus/client_golang/prometheus/promhttp"
+	"github.com/sirupsen/logrus"
 	"github.com/swaggo/gin-swagger"
 )
 
 type AuthHandlers struct {
-	loggerMongo logger.LoggerMongo
-	service     *services.Service
-	cache       cache.RedisCash
+	LoggerMongo logger.Logger
+	UserService services.UserService
+	Cache       cache.Cache
 }
 
-func (handler AuthHandlers) getAndCheckToken(context *gin.Context) (string, error) {
-	tokenSigned, err := middleware.GetToken(context)
-	if err != nil {
-		errorToken := fmt.Errorf("get rating error : %v", err)
-		if errorLogger := handler.loggerMongo.LogError(context, errorToken); errorLogger != nil {
-			logrus.Error("error in logger", errorLogger.Error())
-		}
-		HandleError(err, context)
-		return "", errorToken
-	}
-	isKey, err := handler.cache.GetValue(tokenSigned)
-	if isKey && err != cache.UserSignedOut {
-		context.JSON(http.StatusBadRequest, "user with this token signed-out")
-		return "", err
-	}
-	return tokenSigned, nil
-}
-
-func NewAuthHandlers() (*AuthHandlers, error) {
-	mongoDBClient, err := logger.NewClientMongo()
-	if err != nil {
-		return nil, err
-	}
-	srv := new(services.Service)
-	srv.Db, err = database.NewDB(configs.NewConfig())
-	if err != nil {
-		return nil, err
-	}
-	ch, err := cache.NewRedisCash()
-	if err != nil {
-		return nil, err
-	}
+//func NewAuthHandlers(log logger.LoggerMongo, srv services.Service, cache cache.RedisCash) *AuthHandlers {
+//	return &AuthHandlers{
+//		LoggerMongo: log,
+//		UserService: srv,
+//		Cache:       cache,
+//	}
+//}
+func NewAuthHandlers(log logger.Logger, srv services.UserService, cache cache.Cache) *AuthHandlers {
 	return &AuthHandlers{
-		loggerMongo: logger.NewLogger(mongoDBClient),
-		service:     srv,
-		cache:       ch,
-	}, nil
-}
-func prometheusHandler() gin.HandlerFunc {
-	h := promhttp.Handler()
-	return func(c *gin.Context) {
-		h.ServeHTTP(c.Writer, c.Request)
+		LoggerMongo: log,
+		UserService: srv,
+		Cache:       cache,
 	}
 }
 
-func SetRequestHandlers() (*gin.Engine, error) {
+func SetRequestHandlers(log logger.Logger, srv services.UserService, cache cache.Cache) (*gin.Engine, error) {
 	router := gin.New()
-	handler, err := NewAuthHandlers()
-	if err != nil {
-		return nil, err
-	}
+	handler := NewAuthHandlers(log, srv, cache)
 	router.GET("/", func(c *gin.Context) {
 		c.JSON(http.StatusOK, "hello message")
 	})
+	pprof.Register(router)
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	router.GET("/metrics", prometheusHandler())
 	auth := router.Group("/auth").Use(metricHttpStatus)
@@ -85,7 +51,7 @@ func SetRequestHandlers() (*gin.Engine, error) {
 		auth.POST("/sign-in", handler.signIn)
 	}
 
-	api := router.Group("/api").Use(metricHttpStatus).Use(middleware.Auth())
+	api := router.Group("/api").Use(metricHttpStatus).Use(handler.UserService.Auth())
 	{
 
 		api.GET("/profile", handler.getProfile)
@@ -97,4 +63,29 @@ func SetRequestHandlers() (*gin.Engine, error) {
 		api.POST("/rateTrip", rateTrip)
 	}
 	return router, nil
+}
+
+func (handler AuthHandlers) getAndCheckToken(context *gin.Context) (string, error) {
+	tokenSigned, err := handler.UserService.GetToken(context)
+	if err != nil {
+		errorToken := fmt.Errorf("get rating error : %v", err)
+		if errorLogger := handler.LoggerMongo.LogError(context, errorToken); errorLogger != nil {
+			logrus.Error("error in logger", errorLogger.Error())
+		}
+		HandleError(err, context)
+		return "", errorToken
+	}
+	isKey, err := handler.Cache.GetValue(tokenSigned)
+	if isKey && err != cache.UserSignedOut {
+		context.JSON(http.StatusBadRequest, "user with this token signed-out")
+		return "", err
+	}
+	return tokenSigned, nil
+}
+
+func prometheusHandler() gin.HandlerFunc {
+	h := promhttp.Handler()
+	return func(c *gin.Context) {
+		h.ServeHTTP(c.Writer, c.Request)
+	}
 }
